Fix word wrap

--- a/src/style/Test.css
+++ b/src/style/Test.css
@@ -35,6 +35,8 @@
 
 .test-question-option {
     margin-top: 3px;
+    padding-left: 36px;
+    text-indent: -36px;
 }
 
 .test-question-statement {
